--- a/Requirements.txt
+++ b/Requirements.txt
@@ -10,8 +10,11 @@ Keras-Applications==1.0.2
 Keras-Preprocessing==1.0.1
 Markdown==2.6.11
 numpy==1.14.5
+pandas==0.23.1
 Pillow==5.2.0
 protobuf==3.6.0
+python-dateutil==2.7.3
+pytz==2018.5
 PyYAML==3.12
 scikit-learn==0.19.1
 scipy==1.1.0
