--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,25 +1,40 @@
 absl-py==0.2.2
 astor==0.6.2
+backcall==0.1.0
 bleach==1.5.0
+decorator==4.3.0
 gast==0.2.0
 grpcio==1.13.0
 h5py==2.8.0
 html5lib==0.9999999
+ipython==6.4.0
+ipython-genutils==0.2.0
+jedi==0.12.1
 Keras==2.2.0
 Keras-Applications==1.0.2
 Keras-Preprocessing==1.0.1
 Markdown==2.6.11
 numpy==1.14.5
 pandas==0.23.1
+parso==0.3.0
+pexpect==4.6.0
+pickleshare==0.7.4
 Pillow==5.2.0
+prompt-toolkit==1.0.15
 protobuf==3.6.0
+ptyprocess==0.6.0
+Pygments==2.2.0
 python-dateutil==2.7.3
 pytz==2018.5
 PyYAML==3.12
 scikit-learn==0.19.1
 scipy==1.1.0
+simplegeneric==0.8.1
 six==1.11.0
 tensorboard==1.8.0
-tensorflow==1.8.0
+tensorflow==1.5.0
+tensorflow-tensorboard==1.5.1
 termcolor==1.1.0
+traitlets==4.3.2
+wcwidth==0.1.7
 Werkzeug==0.14.1
